--- a/client_web/src/app/top-bar/top-bar.component.html
+++ b/client_web/src/app/top-bar/top-bar.component.html
@@ -2,6 +2,7 @@
     <span>Address Service Web</span>
     <span class="example-spacer"></span>
     <button mat-flat-button (click)="rest()">RESTful Request</button>
-    <button mat-flat-button (click)="rpc()">gRPC Call</button>
+    <button mat-flat-button (click)="rpcList()">gRPC List</button>
+    <button mat-flat-button (click)="rpcStream()">gRPC Stream</button>
     <button mat-flat-button (click)="stopStream()">Stop Stream</button>
 </mat-toolbar>
